# bible-app

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: cli.hpp  config.hpp  format_utils.hpp  fs_utils.hpp  listing.hpp  print.hpp  reader.hpp  validation.hpp
src/: cli.cpp  config.cpp  format_utils.cpp  fs_utils.cpp  listing.cpp  main.cpp  print.cpp  reader.cpp  validation.cpp
